--- a/package.json
+++ b/package.json
@@ -39,7 +39,11 @@
 		"husky": "^9.1.7",
 		"prettier": "^3.5.3",
 		"pretty-quick": "^4.1.1",
-		"turbo": "^2.5.0"
+		"turbo": "^2.5.0",
+		"typescript": "^5.8.3"
+	},
+	"resolutions": {
+		"ansi-color@^0.2.1": "patch:ansi-color@npm%3A0.2.1#./.yarn/patches/ansi-color-npm-0.2.1-f7243d10a4.patch"
 	},
 	"packageManager": "yarn@4.8.1"
 }
