--- a/.github/workflows/turbo.yml
+++ b/.github/workflows/turbo.yml
@@ -20,6 +20,7 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v4
               with:
+                  token: ${{ secrets.SUBMODULE_PAT }}
                   submodules: recursive
                   fetch-depth: 0
 
