--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -20,6 +20,8 @@ jobs:
                 working-directory: ./sdk/highlight-py
         steps:
             - uses: actions/checkout@v4
+              with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
             - name: Install poetry
               run: pipx install poetry
             - uses: actions/setup-python@v4
@@ -60,6 +62,8 @@ jobs:
 
         steps:
             - uses: actions/checkout@v4
+              with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
             - name: Install poetry
               run: pipx install poetry
             - uses: actions/setup-python@v4
