--- a/.github/workflows/devskim.yml
+++ b/.github/workflows/devskim.yml
@@ -25,6 +25,8 @@ jobs:
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
+              with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
 
             - name: Run DevSkim scanner
               uses: microsoft/DevSkim-Action@v1
