--- a/.github/workflows/elixir-sdk.yml
+++ b/.github/workflows/elixir-sdk.yml
@@ -21,6 +21,8 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v4
+              with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
             - name: Setup Elixir
               uses: erlef/setup-beam@v1
               with:
@@ -36,6 +38,8 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v4
+              with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
             - name: Setup Elixir
               uses: erlef/setup-beam@v1
               with:
@@ -56,6 +60,8 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v4
+              with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
             - name: Setup Elixir
               uses: erlef/setup-beam@v1
               with:
