--- a/.github/workflows/go-sdk.yml
+++ b/.github/workflows/go-sdk.yml
@@ -17,6 +17,8 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v4
+              with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
             - name: Setup Go
               uses: actions/setup-go@v5
               with:
@@ -34,6 +36,8 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v4
+              with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
             - name: Setup Go
               uses: actions/setup-go@v5
               with:
@@ -52,6 +56,8 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v4
+              with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
             - name: Setup Go
               uses: actions/setup-go@v5
               with:
@@ -67,6 +73,8 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v4
+              with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
             - name: Setup Go
               uses: actions/setup-go@v5
               with:
