--- a/.github/workflows/java-sdk.yml
+++ b/.github/workflows/java-sdk.yml
@@ -43,6 +43,7 @@ jobs:
             - name: Checkout Code
               uses: actions/checkout@v4
               with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
                   fetch-depth: 0
 
             - name: Deployment running
@@ -104,6 +105,7 @@ jobs:
             - name: Checkout Code
               uses: actions/checkout@v4
               with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
                   fetch-depth: 0
 
             - name: Set up JDK 17
@@ -135,6 +137,7 @@ jobs:
             - name: Checkout Code
               uses: actions/checkout@v4
               with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
                   fetch-depth: 0
 
             - name: Set up JDK 17
@@ -172,6 +175,7 @@ jobs:
             - name: Checkout Code
               uses: actions/checkout@v4
               with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
                   fetch-depth: 0
 
             - name: Set up JDK 17
