--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -22,6 +22,8 @@ jobs:
                 working-directory: ./sdk/highlight-ruby/highlight
         steps:
             - uses: actions/checkout@v4
+              with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
             - uses: dorny/paths-filter@v2
               id: filter
               with:
@@ -58,6 +60,8 @@ jobs:
                 working-directory: ./e2e/ruby/rails/demo
         steps:
             - uses: actions/checkout@v4
+              with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
             - name: Install Ruby
               uses: ruby/setup-ruby@v1
               with:
@@ -77,6 +81,8 @@ jobs:
                 working-directory: ./e2e/ruby/rails/api-only
         steps:
             - uses: actions/checkout@v4
+              with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
             - name: Install Ruby
               uses: ruby/setup-ruby@v1
               with:
