--- a/.github/workflows/java-sdk.yml
+++ b/.github/workflows/java-sdk.yml
@@ -17,7 +17,7 @@ on:
         branches: ['main']
         tags: ['sdk/highlight-java/**']
     pull_request:
-        types: [opened, reopened, synchronize, assigned, review_requested]
+        types: [opened, synchronize]
         paths:
             - 'sdk/highlight-java/**'
             - '.github/workflows/java-sdk.yml'
