--- a/.github/workflows/rust-sdk.yml
+++ b/.github/workflows/rust-sdk.yml
@@ -4,7 +4,7 @@ on:
     push:
         branches: ['main']
     pull_request:
-        types: [opened, reopened, synchronize, assigned, review_requested]
+        types: [opened, synchronize]
         paths:
             - 'sdk/highlight-rust/**'
             - '.github/workflows/rust-sdk.yml'
