--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -16,12 +16,14 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                ruby: ['3.0', '3.3']
+                ruby: ['3.1', '3.3']
         defaults:
             run:
                 working-directory: ./sdk/highlight-ruby/highlight
         steps:
             - uses: actions/checkout@v4
+              with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
             - uses: dorny/paths-filter@v2
               id: filter
               with:
@@ -58,6 +60,8 @@ jobs:
                 working-directory: ./e2e/ruby/rails/demo
         steps:
             - uses: actions/checkout@v4
+              with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
             - name: Install Ruby
               uses: ruby/setup-ruby@v1
               with:
@@ -77,6 +81,8 @@ jobs:
                 working-directory: ./e2e/ruby/rails/api-only
         steps:
             - uses: actions/checkout@v4
+              with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
             - name: Install Ruby
               uses: ruby/setup-ruby@v1
               with:
