--- a/.github/workflows/rust-sdk.yml
+++ b/.github/workflows/rust-sdk.yml
@@ -4,13 +4,10 @@ on:
     push:
         branches: ['main']
     pull_request:
-        types: [opened, reopened, synchronize, assigned, review_requested]
+        types: [opened, synchronize]
         paths:
             - 'sdk/highlight-rust/**'
             - '.github/workflows/rust-sdk.yml'
-
-permissions:
-    checks: write
 
 defaults:
     run:
@@ -29,7 +26,7 @@ jobs:
             - name: Checkout Code
               uses: actions/checkout@v4
               with:
-                  fetch-depth: 0
+                  token: ${{ secrets.GITHUB_TOKEN }}
 
             - name: Install Rust toolchain
               uses: actions-rs/toolchain@v1
@@ -53,7 +50,7 @@ jobs:
             - name: Checkout Code
               uses: actions/checkout@v4
               with:
-                  fetch-depth: 0
+                  token: ${{ secrets.GITHUB_TOKEN }}
 
             - name: Install Rust toolchain
               uses: actions-rs/toolchain@v1
