--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -17,10 +17,15 @@ jobs:
                 app: ['dotnet', 'dotnet4', 'go', 'python', 'ruby']
 
         steps:
+            - uses: launchdarkly/common-actions/ssh-key-by-repo@main
+              with:
+                  repo_keys_map: |
+                      {
+                        "launchdarkly/pre-commit-hooks": ${{ toJSON(secrets.LAUNCHDARKLY_RRWEB_DEPLOY_KEY) }}
+                      }
             - name: Checkout
               uses: actions/checkout@v4
               with:
-                  token: ${{ secrets.SUBMODULE_PAT }}
                   submodules: recursive
 
             - name: Install poetry
