--- a/.github/workflows/turbo.yml
+++ b/.github/workflows/turbo.yml
@@ -17,10 +17,15 @@ jobs:
             TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
             TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
         steps:
+            - uses: launchdarkly/common-actions/ssh-key-by-repo@main
+              with:
+                  repo_keys_map: |
+                      {
+                        "launchdarkly/pre-commit-hooks": ${{ toJSON(secrets.LAUNCHDARKLY_RRWEB_DEPLOY_KEY) }}
+                      }
             - name: Checkout
               uses: actions/checkout@v4
               with:
-                  token: ${{ secrets.SUBMODULE_PAT }}
                   submodules: recursive
 
             # automatically caches dependencies based on yarn.lock
