--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -17,16 +17,13 @@ jobs:
                 app: ['dotnet', 'dotnet4', 'go', 'python', 'ruby']
 
         steps:
+            - uses: actions/checkout@v4
             - uses: launchdarkly/common-actions/ssh-key-by-repo@main
               with:
                   repo_keys_map: |
                       {
                         "launchdarkly/rrweb": ${{ toJSON(secrets.LAUNCHDARKLY_RRWEB_DEPLOY_KEY) }}
                       }
-            - name: Checkout
-              uses: actions/checkout@v4
-              with:
-                  submodules: recursive
 
             - name: Install poetry
               run: pipx install poetry
