--- a/.github/workflows/turbo.yml
+++ b/.github/workflows/turbo.yml
@@ -17,16 +17,13 @@ jobs:
             TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
             TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
         steps:
+            - uses: actions/checkout@v4
             - uses: launchdarkly/common-actions/ssh-key-by-repo@main
               with:
                   repo_keys_map: |
                       {
                         "launchdarkly/rrweb": ${{ toJSON(secrets.LAUNCHDARKLY_RRWEB_DEPLOY_KEY) }}
                       }
-            - name: Checkout
-              uses: actions/checkout@v4
-              with:
-                  submodules: recursive
 
             # automatically caches dependencies based on yarn.lock
             - name: Setup Node.js environment
