--- a/.github/workflows/turbo.yml
+++ b/.github/workflows/turbo.yml
@@ -27,6 +27,7 @@ jobs:
             - uses: actions/checkout@v4
               with:
                   submodules: 'recursive'
+                  ssh-key: {{ secrets.LAUNCHDARKLY_RRWEB_DEPLOY_KEY }}
 
             # automatically caches dependencies based on yarn.lock
             - name: Setup Node.js environment
