--- a/.github/workflows/devskim.yml
+++ b/.github/workflows/devskim.yml
@@ -17,7 +17,7 @@ on:
 jobs:
     lint:
         name: DevSkim
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-22.04-8core-32gb
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
