--- a/.github/workflows/elixir-sdk.yml
+++ b/.github/workflows/elixir-sdk.yml
@@ -17,7 +17,7 @@ concurrency: ${{ github.workflow }}-${{ github.ref }}
 jobs:
     format:
         name: format elixir files
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-22.04-8core-32gb
         steps:
             - name: Checkout
               uses: actions/checkout@v4
@@ -34,7 +34,7 @@ jobs:
 
     test:
         name: test package
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-22.04-8core-32gb
         steps:
             - name: Checkout
               uses: actions/checkout@v4
@@ -54,7 +54,7 @@ jobs:
 
     publish:
         name: publish package
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-22.04-8core-32gb
         if: github.ref == 'ref/heads/main'
         needs: test
         steps:
