--- a/.github/workflows/force-go-release.yml
+++ b/.github/workflows/force-go-release.yml
@@ -12,7 +12,7 @@ concurrency: ${{ github.workflow }}-${{ github.ref }}
 jobs:
     build:
         name: Renew documentation
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-22.04-8core-32gb
         steps:
             - name: Pull new module version
               uses: andrewslotin/go-proxy-pull-action@master
