--- a/.github/workflows/go-sdk.yml
+++ b/.github/workflows/go-sdk.yml
@@ -13,7 +13,7 @@ concurrency: ${{ github.workflow }}-${{ github.ref }}
 jobs:
     format:
         name: format go files
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-22.04-8core-32gb
         steps:
             - name: Checkout
               uses: actions/checkout@v4
@@ -32,7 +32,7 @@ jobs:
 
     lint:
         name: lint go files
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-22.04-8core-32gb
         steps:
             - name: Checkout
               uses: actions/checkout@v4
@@ -52,7 +52,7 @@ jobs:
 
     build:
         name: build binary
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-22.04-8core-32gb
         steps:
             - name: Checkout
               uses: actions/checkout@v4
@@ -69,7 +69,7 @@ jobs:
     test-and-cov:
         name: run tests and generate code coverage profile
         needs: [build]
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-22.04-8core-32gb
         steps:
             - name: Checkout
               uses: actions/checkout@v4
