--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -13,7 +13,7 @@ concurrency: ${{ github.workflow }}-${{ github.ref }}
 jobs:
     build:
         name: Ruby SDK
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-22.04-8core-32gb
         strategy:
             matrix:
                 ruby: ['3.1', '3.3']
@@ -54,7 +54,7 @@ jobs:
                   RUBYGEMS_API_KEY: '${{secrets.RUBYGEMS_API_KEY}}'
     e2e:
         name: Rails Example App Tests
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-22.04-8core-32gb
         defaults:
             run:
                 working-directory: ./e2e/ruby/rails/demo
@@ -75,7 +75,7 @@ jobs:
               run: bundle exec rubocop
     e2e-api-only:
         name: Rails API-Only Example App Tests
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-22.04-8core-32gb
         defaults:
             run:
                 working-directory: ./e2e/ruby/rails/api-only
