--- a/.github/workflows/rust-sdk.yml
+++ b/.github/workflows/rust-sdk.yml
@@ -17,7 +17,7 @@ concurrency: ${{ github.workflow }}-${{ github.ref }}
 jobs:
     build:
         name: Build
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-22.04-8core-32gb
         if: github.event_name == 'pull_request'
         defaults:
             run:
@@ -41,7 +41,7 @@ jobs:
                   dry-run: true
     publish:
         name: Publish
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-22.04-8core-32gb
         if: github.event_name == 'push'
         defaults:
             run:
