--- a/.github/workflows/turbo.yml
+++ b/.github/workflows/turbo.yml
@@ -41,22 +41,8 @@ jobs:
             - name: Check yarn for duplicate deps
               run: yarn dedupe --check
 
-            - name: Check generated files for Reflame
-              run: yarn reflame-check
-
             - name: Check formatting
               run: yarn format-check
-
-            - name: Configure AWS credentials
-              if: github.ref == 'refs/heads/main'
-              uses: aws-actions/configure-aws-credentials@v4
-              with:
-                  aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-                  aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                  aws-region: us-east-2
-
-            - name: Install Doppler CLI
-              uses: dopplerhq/cli-action@v3
 
             - name: Install Playwright Browsers
               run: npx playwright install --with-deps
@@ -64,7 +50,6 @@ jobs:
             - name: Build & test (in a fork without doppler)
               run: yarn test:all
               env:
-                  GRAPHCMS_TOKEN: ${{ secrets.GRAPHCMS_TOKEN }}
                   NEXT_PUBLIC_HIGHLIGHT_PROJECT_ID: 1jdkoe52
                   REACT_APP_COMMIT_SHA: ${{ github.event.pull_request.head.sha || github.sha }}
 
@@ -81,7 +66,7 @@ jobs:
               id: changesets-publish
               uses: changesets/action@v1
               with:
-                  publish: yarn publish:turbo
+                  publish: yarn publish
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   NPM_TOKEN: ${{ secrets.NPM_TOKEN_HIGHLIGHT_RUN }}
