--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
 		"rrweb/packages/plugins/*",
 		"sdk/*"
 	],
+	"installConfig": {
+		"hoistingLimits": "workspaces"
+	},
 	"scripts": {
 		"build": "yarn turbo run build --filter '!@rrweb/web-extension'",
 		"e2e:cloudflare": "yarn turbo run dev --filter cloudflare-worker...",
