--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -11,17 +11,13 @@ jobs:
     e2e-docker:
         name: E2E Dockerized Apps
         timeout-minutes: 60
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-22.04-8core-32gb
         strategy:
             matrix:
                 app: ['dotnet', 'dotnet4', 'go', 'python', 'ruby']
 
         steps:
-            - name: Checkout
-              uses: actions/checkout@v4
-              with:
-                  token: ${{ secrets.SUBMODULE_PAT }}
-                  submodules: recursive
+            - uses: actions/checkout@v4
 
             - name: Install poetry
               run: pipx install poetry
@@ -35,21 +31,6 @@ jobs:
             - name: Install dependencies
               working-directory: ./e2e/tests
               run: poetry install --all-extras
-
-            - name: Login to Docker Hub
-              if: github.event.pull_request.head.repo.full_name == 'highlight/highlight' || github.ref == 'refs/heads/main'
-              uses: docker/login-action@v3
-              with:
-                  username: ${{ secrets.DOCKERHUB_USERNAME }}
-                  password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-            - name: Login to GitHub Docker
-              if: github.event.pull_request.head.repo.full_name == 'highlight/highlight' || github.ref == 'refs/heads/main'
-              uses: docker/login-action@v3
-              with:
-                  registry: ghcr.io
-                  username: Vadman97
-                  password: ${{ secrets.GH_DOCKER_TOKEN }}
 
             - name: Start docker containers & run sdk e2e test
               working-directory: ./e2e/tests/src
