--- a/.github/workflows/turbo.yml
+++ b/.github/workflows/turbo.yml
@@ -11,17 +11,22 @@ jobs:
     yarn-monorepo:
         name: Build Yarn Turborepo
         timeout-minutes: 60
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-22.04-8core-32gb
         # configures turborepo Remote Caching
         env:
             TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
             TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
         steps:
-            - name: Checkout
-              uses: actions/checkout@v4
+            - uses: launchdarkly/common-actions/ssh-key-by-repo@main
               with:
-                  token: ${{ secrets.SUBMODULE_PAT }}
-                  submodules: recursive
+                  repo_keys_map: |
+                      {
+                        "launchdarkly/rrweb": ${{ toJSON(secrets.LAUNCHDARKLY_RRWEB_DEPLOY_KEY) }}
+                      }
+            - uses: launchdarkly/common-actions/init@main
+              env:
+                  GITHUB_TOKEN: ${{ github.token }}
+            - run: git submodule update --init --recursive
 
             # automatically caches dependencies based on yarn.lock
             - name: Setup Node.js environment
@@ -36,30 +41,12 @@ jobs:
             - name: Check yarn for duplicate deps
               run: yarn dedupe --check
 
-            - name: Check generated files for Reflame
-              run: yarn reflame-check
-
             - name: Check formatting
               run: yarn format-check
 
-            - name: Configure AWS credentials
-              if: github.ref == 'refs/heads/main'
-              uses: aws-actions/configure-aws-credentials@v4
-              with:
-                  aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-                  aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                  aws-region: us-east-2
-
-            - name: Install Doppler CLI
-              uses: dopplerhq/cli-action@v3
-
-            - name: Install Playwright Browsers
-              run: npx playwright install --with-deps
-
             - name: Build & test (in a fork without doppler)
-              run: yarn test:all
+              run: yarn test
               env:
-                  GRAPHCMS_TOKEN: ${{ secrets.GRAPHCMS_TOKEN }}
                   NEXT_PUBLIC_HIGHLIGHT_PROJECT_ID: 1jdkoe52
                   REACT_APP_COMMIT_SHA: ${{ github.event.pull_request.head.sha || github.sha }}
 
@@ -76,7 +63,7 @@ jobs:
               id: changesets-publish
               uses: changesets/action@v1
               with:
-                  publish: yarn publish:turbo
+                  publish: yarn publish
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   NPM_TOKEN: ${{ secrets.NPM_TOKEN_HIGHLIGHT_RUN }}
