--- a/sdk/highlight-run/codegen.yml
+++ b/sdk/highlight-run/codegen.yml
@@ -1,5 +1,5 @@
 # Endpoint API, the following URL is a example
-schema: '../../backend/public-graph/graph/schema.graphqls'
+schema: '../../../backend/public-graph/graph/schema.graphqls'
 overwrite: true
 hooks:
     afterAllFileWrite:
