Remove codegen step from CI testing

--- a/turbo.json
+++ b/turbo.json
@@ -7,7 +7,7 @@
 			"cache": false
 		},
 		"typegen": {
-			"dependsOn": ["^typegen", "codegen"],
+			"dependsOn": ["^typegen"],
 			"inputs": [
 				"src/**/*.tsx",
 				"src/**/*.ts",
