--- a/sdk/highlight-remix/package.json
+++ b/sdk/highlight-remix/package.json
@@ -45,6 +45,7 @@
 	},
 	"devDependencies": {
 		"@remix-run/react": "^2.10.0",
+		"@types/js-cookie": "^3.0.6",
 		"tsup": "^8.3.6",
 		"typescript": "^5.1.6"
 	}
