--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -55,6 +55,7 @@ jobs:
               # if: github.ref == 'refs/heads/main'
               uses: pypa/gh-action-pypi-publish@release/v1
               with:
+                  packages-dir: ./sdk/highlight-py/dist/
                   skip-existing: true
 
     e2e:
