Revert "TMP force python publish"
This reverts commit e332a3a389d7df16885fe9863f933a141c4aeaf8.

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -52,7 +52,7 @@ jobs:
                   python -m pip install -U pip pip-tools;
                   python -m piptools compile --upgrade pyproject.toml;
             - name: Publish
-              # if: github.ref == 'refs/heads/main'
+              if: github.ref == 'refs/heads/main'
               uses: pypa/gh-action-pypi-publish@release/v1
               with:
                   packages-dir: ./sdk/highlight-py/dist/
