--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -13,6 +13,11 @@ on:
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 jobs:
     build:
+        permissions:
+            id-token: write # for python PyPI OIDC login
+            contents: write
+            pull-requests: write
+            repository-projects: write
         name: Python SDK
         runs-on: ubuntu-22.04-8core-32gb
         defaults:
@@ -48,10 +53,10 @@ jobs:
                   python -m piptools compile --upgrade pyproject.toml;
             - name: Publish
               if: github.ref == 'refs/heads/main'
-              run: poetry publish -u $PYPI_USERNAME -p $PYPI_PASSWORD --skip-existing
-              env:
-                  PYPI_USERNAME: ${{ secrets.PYPI_USERNAME }}
-                  PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+              uses: pypa/gh-action-pypi-publish@release/v1
+              with:
+                  packages-dir: ./sdk/highlight-py/dist/
+                  skip-existing: true
 
     e2e:
         name: Validate E2E tests
