--- a/sdk/highlight-node/package.json
+++ b/sdk/highlight-node/package.json
@@ -6,9 +6,7 @@
 		"typegen": "tsc -d --emitDeclarationOnly",
 		"dev": "yarn build --watch",
 		"build": "rollup --config rollup.config.mjs",
-		"test": "yarn test:check-deps && yarn test:vitest",
-		"test:check-deps": "node scripts/check-deps.mjs",
-		"test:vitest": "vitest run"
+		"test": "vitest run"
 	},
 	"main": "./dist/index.cjs",
 	"module": "./dist/index.js",
@@ -20,9 +18,6 @@
 	"files": [
 		"dist"
 	],
-	"installConfig": {
-		"hoistingLimits": "workspaces"
-	},
 	"publishConfig": {
 		"access": "public"
 	},
@@ -55,7 +50,6 @@
 		"@rollup/plugin-typescript": "^12.1.2",
 		"@types/lru-cache": "^7.10.10",
 		"@types/node": "^14.18.63",
-		"check-dependencies": "^2.0.0",
 		"encoding": "^0.1.13",
 		"highlight.run": "workspace:*",
 		"rollup": "^4.34.8",
