--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -4,4 +4,6 @@ enableGlobalCache: true
 
 nodeLinker: node-modules
 
+npmRegistryServer: "https://registry.npmjs.org"
+
 yarnPath: .yarn/releases/yarn-4.9.1.cjs
