--- a/sdk/highlight-run/package.json
+++ b/sdk/highlight-run/package.json
@@ -59,11 +59,11 @@
 		"@graphql-codegen/typescript": "^4.0.1",
 		"@graphql-codegen/typescript-graphql-request": "^6.0.1",
 		"@graphql-codegen/typescript-operations": "^4.0.1",
+		"@highlight-run/rrweb-types": "workspace:*",
 		"@rollup/plugin-commonjs": "^25.0.7",
 		"@rollup/plugin-json": "^6.1.0",
 		"@rollup/plugin-node-resolve": "^15.2.3",
 		"@rollup/plugin-typescript": "^11.1.6",
-		"@rrweb/types": "workspace:*",
 		"@size-limit/file": "^8.1.0",
 		"@types/chrome": "^0.0.268",
 		"@types/js-cookie": "^3.0.6",
@@ -81,6 +81,8 @@
 		"vitest-canvas-mock": "^0.3.3"
 	},
 	"dependencies": {
+		"@highlight-run/rrweb": "workspace:*",
+		"@highlight-run/rrweb-rrweb-plugin-sequential-id-record": "workspace:*",
 		"@opentelemetry/api": "^1.9.0",
 		"@opentelemetry/exporter-metrics-otlp-http": ">=0.57.1",
 		"@opentelemetry/exporter-trace-otlp-http": ">=0.57.1",
@@ -94,7 +96,6 @@
 		"@opentelemetry/sdk-metrics": "^1.30.1",
 		"@opentelemetry/sdk-trace-web": "^1.30.1",
 		"@opentelemetry/semantic-conventions": "^1.28.0",
-		"@rrweb/rrweb-plugin-sequential-id-record": "workspace:*",
 		"error-stack-parser": "2.0.6",
 		"fflate": "^0.8.1",
 		"graphql": "^16.8.1",
@@ -102,7 +103,6 @@
 		"graphql-tag": "^2.12.6",
 		"js-cookie": "^3.0.5",
 		"json-stringify-safe": "^5.0.1",
-		"rrweb": "workspace:*",
 		"stacktrace-js": "2.0.2",
 		"web-vitals": "^3.5.0",
 		"zone.js": "^0.15.0"
