--- a/sdk/@launchdarkly/session-replay/package.json
+++ b/sdk/@launchdarkly/session-replay/package.json
@@ -22,6 +22,18 @@
 			"url": "https://github.com/launchdarkly/observability-sdk.git"
 		}
 	},
+	"scripts": {
+		"typegen": "tsc",
+		"build": "vite build"
+	},
+	"dependencies": {
+		"highlight.run": "workspace:*"
+	},
+	"devDependencies": {
+		"typescript": "^5.8.3",
+		"vite": "^6.3.4",
+		"vitest": "^3.1.2"
+	},
 	"type": "module",
 	"main": "./dist/index.js",
 	"module": "./dist/index.js",
