--- a/sdk/highlight-node/tsconfig.json
+++ b/sdk/highlight-node/tsconfig.json
@@ -14,8 +14,5 @@
 		"resolveJsonModule": true,
 		"typeRoots": ["./node_modules/@types"]
 	},
-	"include": ["src"],
-	"references": [{
-		"path": "../highlight-run"
-	}]
+	"include": ["src"]
 }
