move dependencies into dev as they are bundled

--- a/sdk/highlight-run/package.json
+++ b/sdk/highlight-run/package.json
@@ -59,28 +59,6 @@
 		"@graphql-codegen/typescript": "^4.0.1",
 		"@graphql-codegen/typescript-graphql-request": "^6.0.1",
 		"@graphql-codegen/typescript-operations": "^4.0.1",
-		"@rollup/plugin-commonjs": "^25.0.7",
-		"@rollup/plugin-json": "^6.1.0",
-		"@rollup/plugin-node-resolve": "^15.2.3",
-		"@rollup/plugin-typescript": "^11.1.6",
-		"@rrweb/types": "workspace:*",
-		"@size-limit/file": "^8.1.0",
-		"@types/chrome": "^0.0.268",
-		"@types/js-cookie": "^3.0.6",
-		"@types/json-stringify-safe": "^5.0.3",
-		"@types/node": "^16.3.1",
-		"@vitest/web-worker": "^1.6.0",
-		"npm-run-all": "^4.1.5",
-		"prettier": "^3.3.3",
-		"readdirp": "^3.6.0",
-		"size-limit": "^8.1.0",
-		"tslib": "^2.6.2",
-		"typescript": "^5.0.4",
-		"vite": "^5.2.12",
-		"vitest": "^1.6.0",
-		"vitest-canvas-mock": "^0.3.3"
-	},
-	"dependencies": {
 		"@opentelemetry/api": "^1.9.0",
 		"@opentelemetry/exporter-metrics-otlp-http": ">=0.57.1",
 		"@opentelemetry/exporter-trace-otlp-http": ">=0.57.1",
@@ -94,7 +72,18 @@
 		"@opentelemetry/sdk-metrics": "^1.30.1",
 		"@opentelemetry/sdk-trace-web": "^1.30.1",
 		"@opentelemetry/semantic-conventions": "^1.28.0",
+		"@rollup/plugin-commonjs": "^25.0.7",
+		"@rollup/plugin-json": "^6.1.0",
+		"@rollup/plugin-node-resolve": "^15.2.3",
+		"@rollup/plugin-typescript": "^11.1.6",
 		"@rrweb/rrweb-plugin-sequential-id-record": "workspace:*",
+		"@rrweb/types": "workspace:*",
+		"@size-limit/file": "^8.1.0",
+		"@types/chrome": "^0.0.268",
+		"@types/js-cookie": "^3.0.6",
+		"@types/json-stringify-safe": "^5.0.3",
+		"@types/node": "^16.3.1",
+		"@vitest/web-worker": "^1.6.0",
 		"error-stack-parser": "2.0.6",
 		"fflate": "^0.8.1",
 		"graphql": "^16.8.1",
@@ -102,8 +91,17 @@
 		"graphql-tag": "^2.12.6",
 		"js-cookie": "^3.0.5",
 		"json-stringify-safe": "^5.0.1",
+		"npm-run-all": "^4.1.5",
+		"prettier": "^3.3.3",
+		"readdirp": "^3.6.0",
 		"rrweb": "workspace:*",
+		"size-limit": "^8.1.0",
 		"stacktrace-js": "2.0.2",
+		"tslib": "^2.6.2",
+		"typescript": "^5.0.4",
+		"vite": "^5.2.12",
+		"vitest": "^1.6.0",
+		"vitest-canvas-mock": "^0.3.3",
 		"web-vitals": "^3.5.0",
 		"zone.js": "^0.15.0"
 	},
