--- a/e2e/react-router/package.json
+++ b/e2e/react-router/package.json
@@ -14,6 +14,7 @@
 		"@launchdarkly/js-client-sdk": "^0.6.0",
 		"@launchdarkly/observability": "workspace:*",
 		"@launchdarkly/session-replay": "workspace:*",
+		"launchdarkly-js-client-sdk": "^3.7.0-beta.1",
 		"localforage": "^1.10.0",
 		"match-sorter": "^6.3.1",
 		"react": "^19.0.0",
