refactor highlight.run SDK into plugins (#21)
## Summary

Refactors the `highlight.run` SDK into plugins that can be connected to
the `3.x` and `4.x` LaunchDarkly SDKs.

```tsx
import { initialize } from '@launchdarkly/js-client-sdk'
import Observability, { LDObserve } from '@launchdarkly/observability'
import SessionReplay, { LDRecord } from '@launchdarkly/session-replay'

const client = initialize('client-side-id-123abc', {
	plugins: [
		new Observability('highlight-project-id', {
			networkRecording: {
				enabled: true,
				recordHeadersAndBody: true,
			},
			otlpEndpoint: 'https://otel.observability.ld-stg.launchdarkly.com',
		}),
		new SessionReplay('highlight-project-id', {
			networkRecording: {
				enabled: true,
				recordHeadersAndBody: true,
			},
			backendUrl: 'https://pub.observability.ld-stg.launchdarkly.com',
		}),
	],
})
```

## How did you test this change?

local testing with react-router app, new unit tests

validating bundling working as expected (`@launchdarkly/observability`
does not bundle rrweb, `@launchdarkly/session-replay` bundles
observability features since it uses them and rrweb)
<img width="1774" alt="Screenshot 2025-05-05 at 22 17 37"
src="https://github.com/user-attachments/assets/17b6d62f-b5a3-4196-9ae4-2f345a9dcd9a"
/>
<img width="1764" alt="Screenshot 2025-05-05 at 22 17 47"
src="https://github.com/user-attachments/assets/288d4364-3830-4c45-92e6-fda16666598f"
/>


## Are there any deployment considerations?

0.1.0 versions of `@launchdarkly` packages released.
changeset for `highlight.run`

## Does this work require review from our design team?

no

--- a/sdk/@launchdarkly/session-replay/package.json
+++ b/sdk/@launchdarkly/session-replay/package.json
@@ -22,20 +22,21 @@
 			"url": "https://github.com/launchdarkly/observability-sdk.git"
 		}
 	},
-	"type": "module",
-	"main": "./dist/index.js",
-	"module": "./dist/index.js",
-	"unpkg": "./dist/index.umd.js",
-	"jsdelivr": "./dist/index.umd.js",
-	"types": "./dist/index.d.ts",
-	"exports": {
-		"types": "./dist/index.d.ts",
-		"unpkg": "./dist/index.umd.js",
-		"jsdelivr": "./dist/index.umd.js",
-		"import": "./dist/index.js",
-		"require": "./dist/index.js",
-		"default": "./dist/index.js"
+	"scripts": {
+		"typegen": "tsc",
+		"build": "vite build"
 	},
+	"devDependencies": {
+		"highlight.run": "workspace:*",
+		"rollup-plugin-visualizer": "^5.14.0",
+		"typescript": "^5.8.3",
+		"vite": "^6.3.4",
+		"vitest": "^3.1.2"
+	},
+	"type": "module",
+	"main": "./dist/session-replay.js",
+	"module": "./dist/session-replay.js",
+	"types": "./dist/index.d.ts",
 	"files": [
 		"dist"
 	],
